@@ -1,26 +1,28 @@
 package net.derfla.quickeconomy.util;
 
+import com.fasterxml.jackson.databind.JsonNode;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import net.derfla.quickeconomy.Main;
 import org.bukkit.plugin.Plugin;
-import org.json.simple.JSONObject;
-import org.json.simple.parser.JSONParser;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 
 public class DerflaAPI {
 
     private static final Plugin plugin = Main.getInstance();
     private static final String VERSION_URL = "https://derfla.net/api/qe.json";
-    private static final String CURRENT_VERSION = plugin.getDescription().getVersion();
+    private static final String CURRENT_VERSION = plugin.getPluginMeta().getVersion();
+    private static final ObjectMapper objectMapper = new ObjectMapper();
 
 
     public static boolean updateAvailable() {
         try {
             // Create a URL object and open connection
-            URL url = new URL(VERSION_URL);
+            URL url = new URI(VERSION_URL).toURL();
             HttpURLConnection connection = (HttpURLConnection) url.openConnection();
             connection.setRequestMethod("GET");
 
@@ -36,9 +38,8 @@ public class DerflaAPI {
 
             // Parse the JSON
             String jsonString = content.toString();
-            JSONParser parser = new JSONParser();
-            JSONObject json = (JSONObject) parser.parse(jsonString);
-            String latestVersion = (String) json.get("version");
+            JsonNode json = objectMapper.readTree(jsonString);
+            String latestVersion = json.get("version").asText();
 
             return TypeChecker.isNewerVersion(latestVersion, CURRENT_VERSION);
 
